# coding-for-pleasure

./: .gitignore  LICENSE
advent-of-code/aoc2015/rust/: Cargo.toml  day01  day01.rs  day02.rs  day03.rs
advent-of-code/aoc2016/raku/: day01.raku
advent-of-code/aoc2016/rust/: Cargo.toml
advent-of-code/aoc2017/go/: go.mod  main.go
advent-of-code/aoc2017/haxe/: Day04.hx
advent-of-code/aoc2017/lua/: day05.lua
advent-of-code/aoc2023/rust/: Cargo.toml
advent-of-code/aoc2023/rust/src/: lib.rs
codeforces/: p1573a.py
competitive-programming-misc/BAPC-2019/: breaking_branches.py  lucky_draw.py
competitive-programming/codeforces/: p1607d.py
competitive-programming/kattis/: heimavinna.py  popularitycontest.py  quickbrownfox.py  speedlimit.py  twostones.py  vacuumba.py  yinyangstones.py  zamka.py
competitive-programming/reference-material/: reference.odt
competitive-programming/templates/: python.py
neetcode/: arrays_03_two_sum.py  arrays_04_group_anagrams.py  arrays_05_top_k_frequent_elements.py  arrays_06_product_of_array_except_self.py
project-euler/: p0050.py
project-euler/python/: p0001.py  p0002.py  p0003.py  p0004.py  p0005.py  p0006.py  p0007.py  p0008.py  p0009.py  p0010.py  p0011.py  p0012.py  p0013.py  p0014.py  p0015.py  p0017.py  p0018.py  p0019.py  p0020.py  p0021.py  p0022.py  p0023.py  p0024.py  p0025.py  p0027.py  p0028.py  p0029.py  p0030.py  p0032.py  p0034.py  p0035.py  p0037.py  p0038.py  p0040.py  p0042.py  p0044.py  p0046.py  p0048.py  p0049.py  p0065.py  (+4 more)
rust_utils/: Cargo.toml
rust_utils/src/: lib.rs
(+155 files in other folders)
