[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "../../../rust_utils" }
bit_reverse = "0.1.8"
counter = "0.5.7"
for-else = "0.2.0"
memoize = "0.4.1"
num = "0.4.1"
regex = "1.10.2"
